--- a/html/index.html
+++ b/html/index.html
@@ -3,27 +3,25 @@
   <head><title>Cloud Programming</title></head>
   <body>
     <h1>Hello World!</h1>
-    <p>Click the button below to check the latency of this site.</p>
-    <button onclick="checkLatency()">Check Latency</button>
-    <p id="latency">Latency: -- ms</p>
+    <button onclick="measureSelfLatency()">Check Latency</button>
+    <p id="result">Click the button to check latency to this page.</p>
 
     <script>
-      function checkLatency() {
-        const startTime = performance.now();
-        const testImage = new Image();
-        const latencyDisplay = document.getElementById('latency');
+      async function measureSelfLatency() {
+        const endpoint = window.location.href;
+        const start = performance.now();
 
-        testImage.src = `?cacheBuster=${Math.random()}`; // Prevent caching
-        testImage.onload = function () {
-          const endTime = performance.now();
-          const latency = Math.round(endTime - startTime);
-          latencyDisplay.textContent = `Latency: ${latency} ms`;
-        };
-
-        testImage.onerror = function () {
-          latencyDisplay.textContent = 'Error: Unable to measure latency.';
-        };
+        try {
+          await fetch(endpoint, { method: 'HEAD', cache: 'no-store' });
+          const end = performance.now();
+          const latency = end - start;
+          document.getElementById("result").textContent = `Latency to this site: ${latency.toFixed(2)} ms`;
+        } catch (err) {
+          document.getElementById("result").textContent = `Error checking latency: ${err}`;
+        }
       }
     </script>
+
+
   </body>
 </html>
